style/style.css
/*
 navbar-color:#267AAA
 text-color #4F4F4F
*/

/* ----------------------------------------------- */
/* BASIC SETUP */
/* ----------------------------------------------- */
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body {
  text-rendering: optimizeLegibility;
  overflow-x: hidden;
}

html {
  font-size: 62.5%;
}

body {
  padding: 0 2%;
  margin: 0 auto;
  background-color: #f0f0f0;
}

.site {
  margin: 0 auto;
  max-width: 1180px;
  padding: 0;
  box-shadow: 0 0 8px 2px #888;
}

/* ----------------------------------------------- */
/* REUSEABLE */
/* ----------------------------------------------- */
.logo-big {
  width: 18rem;
}

/* ----- HEADINGS ----- */
h1,
h2,
h3,
h4 {
  text-transform: uppercase;
}
h1 {
  font-size: 3rem;
}

h1,
h2 {
  padding: 2rem 0 5rem 0;
}

h2,
h3 {
  font-size: 2.5rem;
}
h3 {
  margin-bottom: 1rem;
}

h2,
h4 {
  color: #1b5e85;
}

h4 {
  font-size: 1.8rem;
  margin: 1em;
}

/* ----- PARAGRAPHS AND SECTIONS ----- */

p {
  font-size: 1.8rem;
  max-width: 75ch;
  line-height: 2.6rem;
}

section {
  background-color: #fff;
  text-align: center;
  border-bottom: 1px solid #f2f2f2;
  padding: 3rem 4%;
}

/* ----- IMAGES----- */
img {
  max-width: 100%;
  height: auto;
}

/* ----- LINKS----- */
a:link,
a:visited {
  color: #fff;
  text-decoration: none;
  font-size: 1.8rem;
}

/* ----------------------------------------------- */
/* HEADER */
/* ----------------------------------------------- */

header {
  text-align: center;
  vertical-align: middle;
  padding: 3rem 0;
  grid-template-columns: 1fr;
  border-bottom: 1px #f2f2f2 solid;
  background-color: #fff;
}

/* ----- NAVBAR ----- */
nav {
  background-color: #267aaa;
  color: #fff;
  padding: 2em 0;
}

/* ----- MOBILE NAVBAR ----- */
.main-nav {
  display: none;
  flex-direction: column;
  list-style: none;
}

.main-nav a:hover,
.main-nav a:active {
  border-bottom: 1px solid #ffffff;
  padding-bottom: 0.2em;
}
.main-nav li {
  margin-left: 4%;
  text-align: start;
  border-bottom: 1px rgba(255, 255, 255, 0.534) solid;
  padding: 2.5em 1.5em;
  width: 90%;
}

.main-nav li:last-of-type {
  border: none;
}

nav span,
.menu-icon {
  font-size: 2.2em;
  vertical-align: middle;
}

.menu-button {
  cursor: pointer;
}

/* ----- HERO TEXT BOX ----- */
.hero-text-box {
  text-align: center;
  width: 86%;
  margin-left: 6%;
  padding: 0 2%;
}

.hero-text-box p {
  display: inline-block;
}

/* ----------------------------------------------- */
/* WHAT WE DO */
/* ----------------------------------------------- */
.what-we-do {
  display: grid;
  grid-template-columns: 1fr;
  text-align: center;
}

.what-we-do-box {
  margin-bottom: 5rem;
}

.what-we-do-box p {
  text-align: start;
  margin-top: 0.5rem;
}

/* ----------------------------------------------- */
/* WHAT WE DO */
/* ----------------------------------------------- */
.reviews {
  display: grid;
  grid-template-columns: 1fr;
}

.reviews-box {
  padding: 2rem;
}

.reviews-box p {
  padding-bottom: 1rem;
  font-style: italic;
}

.review-logo {
  border-radius: 100px;
  margin-bottom: 1em;
}

/* ----------------------------------------------- */
/* CONTACT US */
/* ----------------------------------------------- */
section:last-of-type {
  background-color: #fafafa;
}
.contact-us {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  grid-gap: 4em;
  text-align: start;
}

/* ----------------------------------------------- */
/* FOOTER */
/* ----------------------------------------------- */
footer {
  background-color: #404040;
  display: flex;
  padding: 5rem 0;
  justify-content: center;
}

footer ion-icon {
  font-size: 3rem;
  margin-right: 1em;
  color: #888888;
}

footer div {
  text-align: center;
}

.twitter,
.linkedin,
.instagram {
  transition: color 0.2s;
}

.twitter:hover,
.twitter:active {
  color: #1da1f2;
}
.linkedin:hover,
.linkedin:active {
  color: #007bb5;
}
.instagram:hover,
.instagram:active {
  color: #8a3ab9;
}

